# compiler

./: .gitignore  CMakeLists.txt  README.md
include/compiler/: Blob.h  Detector.h  DetectorExceptions.h  Files.h  Loader.h  crop.h
src/: Blob.cpp  Detector.cpp  Files.cpp  Loader.cpp  compiler.cpp  crop.cpp
